apps/browser/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: browser
  labels:
    app: browser
spec:
  type: ClusterIP
  selector:
    app: browser
  ports:
    - name: http
      port: 3000
      targetPort: 3000
